test/extended/testdata/egress-firewall/ovnk-egressfirewall-test.yaml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
spec:
  egress:
  - type: Allow
    to:
      dnsName: redhat.com
  - type: Allow
    to:
      dnsName: AMAZON.COM
  - type: Deny
    to:
      dnsName: www.google.com
    ports:
    - port: 80
      protocol: TCP
  - type: Allow
    to:
      cidrSelector: 8.8.8.8/32
  - type: Allow
    to:
      nodeSelector:
        matchLabels:
          node-role.kubernetes.io/control-plane: ''
  - type: Deny
    to:
      cidrSelector: 0.0.0.0/0
  - type: Deny
    to:
      cidrSelector: ::/0
